src/assets/less/local.less
/* ... */
/* Tablet - 768px */
@media only screen and (min-width: 48rem) {
    #reviews-1775 {
        .cs-item {
            flex-direction: row;
        }

        .cs-picture {
            max-width: (240/16rem);
            min-height: 0;
        }
    }
}

/* Large Desktop - 1200px */
@media only screen and (min-width: 75rem) {
    #reviews-1775 {
        .cs-container {
            max-width: (1280/16rem);
        }

        .cs-item {
            grid-column: span 6;
        }

        .cs-info {
            display: flex;
            flex-direction: column;
            justify-content: space-between;
        }
    }
}

/* Dark Mode */
@media only screen and (min-width: 0rem) {
    body.dark-mode {
        #reviews-1775 {
            background-color: rgba(0, 0, 0, 0.6);
        }
    }
}
                                

